--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@ footer {
     <div class="timeline timeline-left">
         <div class="timeline-item">
             <div class="timeline-content">
-                <img src="images/sdev.jpg" alt="Senior Developer" class="timeline-img tall-img">
+                <img src="IMAGES/sdev.jpg" alt="Senior Developer" class="timeline-img tall-img">
                 <h3>Senior Developer</h3>
                 <p><strong>@RAIoT Club | July 2025-Present</strong></p>
                 <p>Became a Senior dev and Junior Panalist at RAIoT Club.</p>
@@ -1003,7 +1003,7 @@ footer {
             </div>
         </div>
         <div class="project-card">
-            <img src="images/rfid.jpeg" alt="Attendance System Using RFID" class="timeline-img">
+            <img src="IMAGES/rfid.jpeg" alt="Attendance System Using RFID" class="timeline-img">
             <h3>Attendance System Using RFID</h3>
             <p>A responsive Attendance Tracking system for Small Organizations using embedded programming and Google Sheets Database Integration.</p>
         </div>
@@ -1100,3 +1100,4 @@ footer {
     </script>
 </body>
 </html>
+
